--- a/ACS111111_ex1/ex1.ipynb
+++ b/ACS111111_ex1/ex1.ipynb
@@ -11,7 +11,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -20,6 +20,14 @@
         "outputId": "ae2393b4-bf42-4881-dd39-82a810b51e4c"
       },
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "d:\\SCHOOL\\機器學習\\NTCU-Machine-Learning\\env\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        },
         {
           "name": "stdout",
           "output_type": "stream",
@@ -150,7 +158,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
@@ -365,6 +373,267 @@
         "    iso_model.fit(X_train_pca)\n",
         "    preds = (iso_model.predict(X_test_pca) == -1).astype(int)\n",
         "    evaluation(y_test, preds, model_name=f\"IsolationForest (contamination={c:.4f})\")\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "## AutoEncoder"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 2ms/step - loss: 0.7138 - val_loss: 0.4539\n",
+            "Epoch 2/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.4379 - val_loss: 0.3857\n",
+            "Epoch 3/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3771 - val_loss: 0.3514\n",
+            "Epoch 4/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3490 - val_loss: 0.3373\n",
+            "Epoch 5/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3362 - val_loss: 0.3278\n",
+            "Epoch 6/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3271 - val_loss: 0.3225\n",
+            "Epoch 7/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3200 - val_loss: 0.3161\n",
+            "Epoch 8/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3145 - val_loss: 0.3108\n",
+            "Epoch 9/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3087 - val_loss: 0.3058\n",
+            "Epoch 10/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.3026 - val_loss: 0.3002\n",
+            "Epoch 11/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m4s\u001b[0m 2ms/step - loss: 0.2976 - val_loss: 0.2949\n",
+            "Epoch 12/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2932 - val_loss: 0.2929\n",
+            "Epoch 13/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2893 - val_loss: 0.2908\n",
+            "Epoch 14/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2852 - val_loss: 0.2900\n",
+            "Epoch 15/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2820 - val_loss: 0.2875\n",
+            "Epoch 16/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2789 - val_loss: 0.2860\n",
+            "Epoch 17/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2760 - val_loss: 0.2853\n",
+            "Epoch 18/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2730 - val_loss: 0.2798\n",
+            "Epoch 19/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2710 - val_loss: 0.2796\n",
+            "Epoch 20/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2690 - val_loss: 0.2777\n",
+            "Epoch 21/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2672 - val_loss: 0.2773\n",
+            "Epoch 22/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 2ms/step - loss: 0.2664 - val_loss: 0.2761\n",
+            "Epoch 23/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 2ms/step - loss: 0.2661 - val_loss: 0.2771\n",
+            "Epoch 24/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m6s\u001b[0m 2ms/step - loss: 0.2644 - val_loss: 0.2773\n",
+            "Epoch 25/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2636 - val_loss: 0.2767\n",
+            "Epoch 26/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2625 - val_loss: 0.2773\n",
+            "Epoch 27/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2626 - val_loss: 0.2762\n",
+            "Epoch 28/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2608 - val_loss: 0.2720\n",
+            "Epoch 29/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2603 - val_loss: 0.2757\n",
+            "Epoch 30/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2598 - val_loss: 0.2750\n",
+            "Epoch 31/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2593 - val_loss: 0.2708\n",
+            "Epoch 32/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2585 - val_loss: 0.2680\n",
+            "Epoch 33/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2573 - val_loss: 0.2629\n",
+            "Epoch 34/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2564 - val_loss: 0.2663\n",
+            "Epoch 35/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2559 - val_loss: 0.2650\n",
+            "Epoch 36/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2555 - val_loss: 0.2635\n",
+            "Epoch 37/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2549 - val_loss: 0.2609\n",
+            "Epoch 38/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2543 - val_loss: 0.2570\n",
+            "Epoch 39/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2534 - val_loss: 0.2554\n",
+            "Epoch 40/40\n",
+            "\u001b[1m2799/2799\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 2ms/step - loss: 0.2528 - val_loss: 0.2558\n",
+            "\u001b[1m2671/2671\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 712us/step\n",
+            "\n",
+            "AutoEncoder Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9975773322565921\n",
+            "  Precision Score: 0.36186770428015563\n",
+            "     Recall Score: 0.6838235294117647\n",
+            "         F1 Score: 0.4732824427480916\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     85307\n",
+            "           1       0.36      0.68      0.47       136\n",
+            "\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.68      0.84      0.74     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
+            "\n",
+            "\n",
+            "AutoEncoder Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9978933323970366\n",
+            "  Precision Score: 0.397196261682243\n",
+            "     Recall Score: 0.625\n",
+            "         F1 Score: 0.4857142857142857\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     85307\n",
+            "           1       0.40      0.62      0.49       136\n",
+            "\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.70      0.81      0.74     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
+            "\n",
+            "\n",
+            "AutoEncoder Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9983029622087239\n",
+            "  Precision Score: 0.47368421052631576\n",
+            "     Recall Score: 0.5955882352941176\n",
+            "         F1 Score: 0.5276872964169381\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     85307\n",
+            "           1       0.47      0.60      0.53       136\n",
+            "\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.74      0.80      0.76     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
+            "\n",
+            "\n",
+            "AutoEncoder Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9984902215512096\n",
+            "  Precision Score: 0.5271317829457365\n",
+            "     Recall Score: 0.5\n",
+            "         F1 Score: 0.5132075471698113\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     85307\n",
+            "           1       0.53      0.50      0.51       136\n",
+            "\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.76      0.75      0.76     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
+            "\n",
+            "\n",
+            "AutoEncoder Evaluation:\n",
+            "=============================================\n",
+            "         Accuracy: 0.9985721475135471\n",
+            "  Precision Score: 0.5813953488372093\n",
+            "     Recall Score: 0.36764705882352944\n",
+            "         F1 Score: 0.45045045045045046\n",
+            "\n",
+            "Classification Report:\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "           0       1.00      1.00      1.00     85307\n",
+            "           1       0.58      0.37      0.45       136\n",
+            "\n",
+            "    accuracy                           1.00     85443\n",
+            "   macro avg       0.79      0.68      0.72     85443\n",
+            "weighted avg       1.00      1.00      1.00     85443\n",
+            "\n"
+          ]
+        }
+      ],
+      "source": [
+        "from tensorflow.keras.models import Model\n",
+        "from tensorflow.keras.layers import Input, Dense\n",
+        "from tensorflow.keras import regularizers\n",
+        "from sklearn.metrics import classification_report, f1_score\n",
+        "import numpy as np\n",
+        "import random\n",
+        "import tensorflow as tf\n",
+        "\n",
+        "SEED = 42\n",
+        "np.random.seed(SEED)\n",
+        "random.seed(SEED)\n",
+        "tf.random.set_seed(SEED)\n",
+        "\n",
+        "# 只拿正常樣本訓練\n",
+        "X_train_auto = X_train[y_train == 0]\n",
+        "\n",
+        "# 建立 AutoEncoder 結構\n",
+        "input_dim = X_train.shape[1]\n",
+        "encoding_dim = 17  # 壓縮\n",
+        "hidden_dim = int(encoding_dim / 2)\n",
+        "\n",
+        "input_layer = Input(shape=(input_dim,))\n",
+        "encoder = Dense(\n",
+        "    encoding_dim, activation=\"tanh\", activity_regularizer=regularizers.l1(1e-5)\n",
+        ")(input_layer)\n",
+        "encoder = Dense(hidden_dim, activation=\"relu\")(encoder)\n",
+        "decoder = Dense(encoding_dim, activation=\"tanh\")(encoder)\n",
+        "decoder = Dense(input_dim, activation=\"linear\")(decoder)\n",
+        "\n",
+        "autoencoder = Model(inputs=input_layer, outputs=decoder)\n",
+        "autoencoder.compile(optimizer=\"adam\", loss=\"mean_squared_error\")\n",
+        "\n",
+        "\n",
+        "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
+        "    accuracy = accuracy_score(y_true, y_pred)\n",
+        "    precision = precision_score(y_true, y_pred, zero_division=0)\n",
+        "    recall = recall_score(y_true, y_pred)\n",
+        "    f1 = f1_score(y_true, y_pred)\n",
+        "\n",
+        "    print(f\"\\n{model_name} Evaluation:\")\n",
+        "    print(\"===\" * 15)\n",
+        "    print(\"         Accuracy:\", accuracy)\n",
+        "    print(\"  Precision Score:\", precision)\n",
+        "    print(\"     Recall Score:\", recall)\n",
+        "    print(\"         F1 Score:\", f1)\n",
+        "    print(\"\\nClassification Report:\")\n",
+        "    print(classification_report(y_true, y_pred))\n",
+        "\n",
+        "\n",
+        "# 訓練\n",
+        "autoencoder.fit(\n",
+        "    X_train_auto,\n",
+        "    X_train_auto,\n",
+        "    epochs=40,\n",
+        "    batch_size=64,\n",
+        "    shuffle=True,\n",
+        "    validation_split=0.1,\n",
+        "    verbose=1,\n",
+        ")\n",
+        "\n",
+        "X_test_pred = autoencoder.predict(X_test)\n",
+        "mse = np.mean(np.power(X_test - X_test_pred, 2), axis=1)\n",
+        "\n",
+        "for c in [99.7, 99.75, 99.8, 99.85, 99.9]:\n",
+        "    threshold = np.percentile(mse, c) \n",
+        "    y_pred = (mse > threshold).astype(int)\n",
+        "    \n",
+        "    evaluation(y_test, y_pred, model_name=\"AutoEncoder\")"
       ]
     }
   ],
