--- a/acs111143_ex1/ex2.ipynb
+++ b/acs111143_ex1/ex2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "254241ba",
    "metadata": {},
    "outputs": [
@@ -10,12 +10,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\USER\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "C:\\Users\\USER\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\xgboost\\training.py:183: UserWarning: [01:35:54] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
+      "C:\\Users\\USER\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\xgboost\\training.py:183: UserWarning: [10:09:16] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Best Threshold = 0.8030\n"
      ]
     }
    ],
@@ -25,7 +31,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.ensemble import IsolationForest\n",
+    "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import (\n",
     "    accuracy_score, precision_score, recall_score,\n",
     "    f1_score, classification_report\n",
@@ -36,6 +42,9 @@
     "# === 1. 基本參數與讀取資料 ===\n",
     "RANDOM_SEED = 42\n",
     "TEST_SIZE = 0.3\n",
+    "N_NORMAL_SEED = 1000\n",
+    "N_FRAUD_SEED = 100\n",
+    "N_PCA_COMPONENTS = 7  # 保持與原始 PCA 相同維度\n",
     "\n",
     "path = kagglehub.dataset_download(\"mlg-ulb/creditcardfraud\")\n",
     "data = pd.read_csv(f\"{path}/creditcard.csv\")\n",
@@ -57,54 +66,77 @@
     "X_train_std = scaler.fit_transform(X_train)\n",
     "X_test_std = scaler.transform(X_test)\n",
     "\n",
-    "# === 4. Isolation Forest 異常分數作為額外特徵 ===\n",
-    "iso_forest = IsolationForest(\n",
-    "    n_estimators=300,\n",
-    "    contamination=sum(y_train) / len(y_train),\n",
-    "    max_samples='auto',\n",
-    "    random_state=RANDOM_SEED\n",
-    ")\n",
-    "iso_forest.fit(X_train_std)\n",
-    "train_anomaly_scores = iso_forest.decision_function(X_train_std).reshape(-1, 1)\n",
-    "test_anomaly_scores = iso_forest.decision_function(X_test_std).reshape(-1, 1)\n",
-    "\n",
-    "# === 5. PCA 特徵抽取（保持足夠變異量，例如 95%）===\n",
-    "pca = PCA(n_components=15, random_state=RANDOM_SEED)\n",
-    "pca.fit(X_train_std)\n",
-    "X_train_pca = pca.transform(X_train_std)\n",
+    "# === 4. PCA 特徵抽取（保持一致的維度）===\n",
+    "pca = PCA(n_components=N_PCA_COMPONENTS, random_state=RANDOM_SEED)\n",
+    "X_train_pca = pca.fit_transform(X_train_std)\n",
     "X_test_pca = pca.transform(X_test_std)\n",
     "\n",
-    "# === 6. 組合所有特徵 ===\n",
-    "X_train_final = np.hstack((X_train_std, train_anomaly_scores, X_train_pca))\n",
-    "X_test_final = np.hstack((X_test_std, test_anomaly_scores, X_test_pca))\n",
+    "# === 5. 使用部份訓練資料建立 KMeans 中心 ===\n",
+    "normal_idx = np.where(y_train == 0)[0][:N_NORMAL_SEED]\n",
+    "fraud_idx = np.where(y_train == 1)[0][:N_FRAUD_SEED]\n",
+    "seed_X = np.vstack([X_train_pca[normal_idx], X_train_pca[fraud_idx]])\n",
+    "seed_labels = np.hstack([np.zeros(len(normal_idx)), np.ones(len(fraud_idx))])\n",
     "\n",
-    "# === 7. 建立 XGBoost 模型（結合測試過的超參數）===\n",
+    "seed_kmeans = KMeans(n_clusters=2, init='k-means++', random_state=RANDOM_SEED)\n",
+    "seed_kmeans.fit(seed_X)\n",
+    "centroids_init = seed_kmeans.cluster_centers_\n",
+    "\n",
+    "# === 6. 使用 KMeans 並產生「到中心點的距離」作為額外特徵 ===\n",
+    "kmeans = KMeans(n_clusters=2, init=centroids_init, n_init=1, random_state=RANDOM_SEED)\n",
+    "kmeans.fit(X_train_pca)\n",
+    "\n",
+    "def compute_cluster_distances(X, centers):\n",
+    "    return np.linalg.norm(X[:, np.newaxis] - centers, axis=2)  # shape: (n_samples, n_clusters)\n",
+    "\n",
+    "train_kmeans_dist = compute_cluster_distances(X_train_pca, kmeans.cluster_centers_)\n",
+    "test_kmeans_dist = compute_cluster_distances(X_test_pca, kmeans.cluster_centers_)\n",
+    "\n",
+    "# === 7. 組合最終特徵（標準化 + PCA + KMeans距離）===\n",
+    "X_train_final = np.hstack((X_train_std, X_train_pca, train_kmeans_dist))\n",
+    "X_test_final = np.hstack((X_test_std, X_test_pca, test_kmeans_dist))\n",
+    "\n",
+    "# === 8. 建立 XGBoost 模型 ===\n",
     "xgb_model = XGBClassifier(\n",
     "    n_estimators=250,\n",
     "    max_depth=6,\n",
     "    learning_rate=0.08,\n",
     "    subsample=0.8,\n",
     "    colsample_bytree=1.0,\n",
-    "    scale_pos_weight=15,\n",
+    "    scale_pos_weight=10,\n",
     "    gamma=0.05,\n",
     "    use_label_encoder=False,\n",
-    "    eval_metric='logloss',\n",
+    "    eval_metric='aucpr',\n",
     "    tree_method='hist',\n",
     "    random_state=RANDOM_SEED\n",
     ")\n",
-    "\n",
     "xgb_model.fit(X_train_final, y_train)\n",
     "\n",
-    "# === 8. 自訂閾值進行預測（使用概率）===\n",
+    "# === 9. 使用自訂閾值進行預測 ===\n",
     "y_prob = xgb_model.predict_proba(X_test_final)[:, 1]\n",
-    "threshold = 0.43\n",
+    "threshold = 0.80\n",
     "y_pred = (y_prob > threshold).astype(int)\n",
+    "from sklearn.metrics import precision_recall_curve, auc\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# === 掃描不同 threshold 值 ===\n",
+    "precisions, recalls, thresholds = precision_recall_curve(y_test, y_prob)\n",
+    "f1_scores = 2 * (precisions * recalls) / (precisions + recalls + 1e-6)\n",
+    "\n",
+    "# === 找出 F1-score 最高的 threshold ===\n",
+    "best_idx = np.argmax(f1_scores)\n",
+    "best_threshold = thresholds[best_idx]\n",
+    "best_precision = precisions[best_idx]\n",
+    "best_recall = recalls[best_idx]\n",
+    "best_f1 = f1_scores[best_idx]\n",
+    "\n",
+    "print(f\"\\nBest Threshold = {best_threshold:.4f}\")\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "id": "fce77a1d",
    "metadata": {},
    "outputs": [
@@ -115,19 +147,19 @@
       "\n",
       "Combined (XGB + IsoForest) Evaluation:\n",
       "=============================================\n",
-      "         Accuracy: 0.9995435553526912\n",
-      "  Precision Score: 0.9224806201550387\n",
-      "     Recall Score: 0.8040540540540541\n",
-      "         F1 Score: 0.8592057761732852\n",
+      "         Accuracy: 0.9995903701883126\n",
+      "  Precision Score: 0.9669421487603306\n",
+      "     Recall Score: 0.7905405405405406\n",
+      "         F1 Score: 0.8698884758364313\n",
       "\n",
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           0       1.00      1.00      1.00     85295\n",
-      "           1       0.92      0.80      0.86       148\n",
+      "           1       0.97      0.79      0.87       148\n",
       "\n",
       "    accuracy                           1.00     85443\n",
-      "   macro avg       0.96      0.90      0.93     85443\n",
+      "   macro avg       0.98      0.90      0.93     85443\n",
       "weighted avg       1.00      1.00      1.00     85443\n",
       "\n"
      ]
@@ -156,25 +188,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2dfa97a",
+   "id": "b4acabd0",
    "metadata": {},
    "source": [
     "\n",
     "Combined (XGB + IsoForest) Evaluation:\n",
     "=============================================\n",
-    "         Accuracy: 0.9995435553526912\n",
-    "  Precision Score: 0.936\n",
+    "         Accuracy: 0.9995903701883126\n",
+    "  Precision Score: 0.9669421487603306\n",
     "     Recall Score: 0.7905405405405406\n",
-    "         F1 Score: 0.8571428571428571\n",
+    "         F1 Score: 0.8698884758364313\n",
     "\n",
     "Classification Report:\n",
     "              precision    recall  f1-score   support\n",
     "\n",
     "           0       1.00      1.00      1.00     85295\n",
-    "           1       0.94      0.79      0.86       148\n",
+    "           1       0.97      0.79      0.87       148\n",
     "\n",
     "    accuracy                           1.00     85443\n",
-    "   macro avg       0.97      0.90      0.93     85443\n",
+    "   macro avg       0.98      0.90      0.93     85443\n",
     "weighted avg       1.00      1.00      1.00     85443\n"
    ]
   }
