--- a/ex1.ipynb
+++ b/ex1.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "J_hwWrqvR0B1"
       },
@@ -24,45 +24,28 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
-        "\n",
-        "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
-        "    accuracy = accuracy_score(y_true, y_pred)\n",
-        "    precision = precision_score(y_true, y_pred)\n",
-        "    recall = recall_score(y_true, y_pred)\n",
-        "    f1 = f1_score(y_true, y_pred)\n",
-        "\n",
-        "    print(f'\\n{model_name} Evaluation:')\n",
-        "    print('===' * 15)\n",
-        "    print('Accuracy:', accuracy)\n",
-        "    print('Precision Score:', precision)\n",
-        "    print('Recall Score:', recall)\n",
-        "    print('F1 Score:', f1)\n",
-        "    print(\"\\nClassification Report:\")\n",
-        "    print(classification_report(y_true, y_pred))\n"
-      ],
-      "metadata": {
-        "id": "5L8tu2-4PwFL"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AzqnADVTJUgL",
-        "outputId": "7104a99b-9c6c-4be8-d7fb-5d8698358bbf"
+        "outputId": "a6fe7705-cbad-454a-a89e-2fdbcb019e54"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "\n",
+            "Random Forest Evaluation:\n",
+            "=============================================\n",
+            "Accuracy: 0.9995318516437859\n",
+            "Precision Score: 0.9576271186440678\n",
+            "Recall Score: 0.7635135135135135\n",
+            "F1 Score: 0.849624060150376\n",
+            "\n",
+            "Classification Report:\n",
             "              precision    recall  f1-score   support\n",
             "\n",
             "           0       1.00      1.00      1.00     85295\n",
@@ -84,6 +67,7 @@
         "from sklearn.metrics import classification_report\n",
         "from sklearn.cluster import KMeans\n",
         "from sklearn.metrics import silhouette_score, accuracy_score, recall_score, f1_score, roc_auc_score, confusion_matrix\n",
+        "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, classification_report\n",
         "\n",
         "RANDOM_SEED = 42\n",
         "TEST_SIZE = 0.3\n",
@@ -104,8 +88,67 @@
         "model.fit(X_train, y_train)\n",
         "y_pred = model.predict(X_test)\n",
         "\n",
-        "print(classification_report(y_test, y_pred))"
+        "def evaluation(y_true, y_pred, model_name=\"Model\"):\n",
+        "    accuracy = accuracy_score(y_true, y_pred)\n",
+        "    precision = precision_score(y_true, y_pred)\n",
+        "    recall = recall_score(y_true, y_pred)\n",
+        "    f1 = f1_score(y_true, y_pred)\n",
+        "\n",
+        "    print(f'\\n{model_name} Evaluation:')\n",
+        "    print('===' * 15)\n",
+        "    print('Accuracy:', accuracy)\n",
+        "    print('Precision Score:', precision)\n",
+        "    print('Recall Score:', recall)\n",
+        "    print('F1 Score:', f1)\n",
+        "    print(\"\\nClassification Report:\")\n",
+        "    print(classification_report(y_true, y_pred))\n",
+        "\n",
+        "evaluation(y_test, y_pred, model_name=\"Random Forest\")\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.asarray(data.drop(columns=['Class']))\n",
+        "y = np.asarray(data['Class'])\n",
+        "\n",
+        "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=TEST_SIZE, random_state=RANDOM_SEED, stratify=y)\n",
+        "scaler = StandardScaler()\n",
+        "x_train = scaler.fit_transform(x_train)\n",
+        "x_test = scaler.transform(x_test)\n",
+        "\n",
+        "n_x_train = x_train[y_train == 0]\n",
+        "n_x_test = n_x_train[:1000]"
+      ],
+      "metadata": {
+        "id": "5L8tu2-4PwFL"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "scores = []\n",
+        "\n",
+        "for k in range(2, 5):\n",
+        "    kmeans = KMeans(n_clusters=k, init='k-means++', random_state=RANDOM_SEED)\n",
+        "    kmeans.fit(n_x_train)\n",
+        "    score = silhouette_score(n_x_train, kmeans.labels_)\n",
+        "    scores.append(score)\n",
+        "\n",
+        "optimal_k = np.argmax(scores) + 2\n",
+        "kmeans = KMeans(n_clusters=optimal_k, init='k-means++', random_state=RANDOM_SEED)\n",
+        "kmeans.fit(n_x_train)\n",
+        "y_pred = kmeans.predict(x_test)\n",
+        "\n",
+        "def align_labels(y_true, y_pred):"
+      ],
+      "metadata": {
+        "id": "xgAu1T_SvRPf"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -125,7 +168,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPlIax00v8M3Hdgl/iyPht6",
+      "authorship_tag": "ABX9TyNn3dGTiVJs1Hq72OAKKrvE",
       "include_colab_link": true
     },
     "kernelspec": {
